--- a/config.toml
+++ b/config.toml
@@ -1,6 +1,7 @@
 baseURL = "https://theias.netlify.app/"
 defaultContentLanguage = "en"
 languageCode = "en-us"
+relativeURLs = true
 theme = "theias"
 title = "Theias"
 
