--- a/data/content.yaml
+++ b/data/content.yaml
@@ -2,6 +2,34 @@ title: "Afonso Theias"
 
 portfolio:
   title: "Portfolio"
+  items:
+    - name: "Arte 1"
+      file: "art1.jpg"
+      description: "Alguma coisa a dizer sobre isto"
+    - name: "Arte 2"
+      file: "art2.jpg"
+      description: "Alguma coisa a dizer sobre isto"
+    - name: "Arte 3"
+      file: "art3.jpg"
+      description: "Alguma coisa a dizer sobre isto"
+    - name: "Arte 4"
+      file: "art4.jpg"
+      description: "Alguma coisa a dizer sobre isto"
+    - name: "Arte 5"
+      file: "art5.jpg"
+      description: "Alguma coisa a dizer sobre isto"
+    - name: "Arte 6"
+      file: "art6.jpg"
+      description: "Alguma coisa a dizer sobre isto"
+    - name: "Arte 7"
+      file: "art7.jpg"
+      description: "Alguma coisa a dizer sobre isto"
+    - name: "Arte 8"
+      file: "art8.jpg"
+      description: "Alguma coisa a dizer sobre isto"
+    - name: "Arte 9"
+      file: "art9.jpg"
+      description: "Alguma coisa a dizer sobre isto"
 
 about:
   title: "Sobre"
