--- a/config.toml
+++ b/config.toml
@@ -7,7 +7,7 @@ theme = "theias"
 staticDir = ["static"]
 
 [params]
-colorBackground = "red"
-colorMainText = "#3d405b"
+colorBackground = "#25383c"
+colorMainText = "#0c090a"
 colorNavbar = "#fff"
-colorPrimary = "#aaa"
+colorPrimary = "#FFFF00"
